--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "__config": "cpp",
         "limits.h": "c",
         "cdefs.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
