--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "struct.h": "c",
         "__config": "cpp",
         "limits.h": "c",
-        "cdefs.h": "c"
+        "cdefs.h": "c",
+        "stdlib.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
