--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "__config": "cpp",
         "limits.h": "c",
         "cdefs.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "csapp.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
